# gazu-stubs

./: .gitignore  README.md  pyproject.toml
.github/workflows/: check.yaml
gazu-stubs/: __init__.pyi  asset.pyi  casting.pyi  client.pyi  entity.pyi  events.pyi  exception.pyi  helpers.pyi  person.pyi  project.pyi  shot.pyi  task.pyi
